# base_geant4

./: CMakeLists.txt  geant4_alpha_sim  init_vis.mac  main.cc  output.root  run.mac
include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
